# ez-credentials

./: LICENSE  MANIFEST.in  README.md  example.py  pyproject.toml
ez_credentials/: __init__.py  core.py  fromenv.py  utils.py
tests/: conftest.py
tests/functional/: test_credential_manager_prompt.py  test_token_credential_manager_prompt.py  test_token_credential_manager_web.py  test_token_manager_prompt.py  test_token_manager_web.py
tests/unit/: test_credential_manager.py  test_token_credential_manager.py  test_token_manager.py
