[tool.poetry]
name = "ez_credentials"
description='Easy credentials management using keyring'
authors = ["Christophe Druet <christophe.druet@entsoe.eu>"]
version = "1.0.0"
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
]
keywords = ["credentials", "keyring"]
packages = [{include = "ez_credentials"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
keyring = "^25.2.1"
pyjwt = "^2.8.0"
pendulum = "^3.0.0"
loguru = "^0.7.2"
yarl = "^1.9.4"
validators = "^0.33.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
toml = "^0.10.2"
pyyaml = "^6.0.1"
click = "^8.1.7"
python-benedict = "^0.33.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"
pytest-icdiff = "^0.9"
aioresponses = "^0.7.6"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["ez_credentials*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["test*"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "ez_credentials/*.py" = ["{version}"]
    "tests/*.py" = ["{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "mongument imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "ez_credentials"
    ignore_missing_imports = true

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

